addedd javadocs, resolved deprecated URL api